--- a/package.json
+++ b/package.json
@@ -10,18 +10,27 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
-    "@mantine/core": "^5.10.1",
+    "@mantine/core": "^5.10.3",
     "@mantine/form": "^5.10.1",
-    "@mantine/hooks": "^5.10.1",
+    "@mantine/hooks": "^5.10.3",
     "@mantine/modals": "^5.10.1",
-    "@mantine/tiptap": "^5.10.1",
+    "@mantine/tiptap": "^5.10.3",
     "@tabler/icons": "^1.119.0",
+    "@tiptap/extension-color": "^2.0.0-beta.217",
+    "@tiptap/extension-highlight": "^2.0.0-beta.217",
     "@tiptap/extension-link": "^2.0.0-beta.209",
+    "@tiptap/extension-placeholder": "^2.0.0-beta.217",
+    "@tiptap/extension-subscript": "^2.0.0-beta.217",
+    "@tiptap/extension-superscript": "^2.0.0-beta.217",
+    "@tiptap/extension-text-align": "^2.0.0-beta.217",
+    "@tiptap/extension-text-style": "^2.0.0-beta.217",
+    "@tiptap/extension-underline": "^2.0.0-beta.217",
     "@tiptap/react": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
     "firebase": "^9.16.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "netlify-cli": "^2.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
