--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
+    "@firebase/util": "^1.9.2",
     "@mantine/core": "^5.10.3",
     "@mantine/form": "^5.10.1",
     "@mantine/hooks": "^5.10.3",
@@ -27,7 +28,9 @@
     "@tiptap/extension-underline": "^2.0.0-beta.217",
     "@tiptap/react": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
+    "axios": "^1.3.3",
     "firebase": "^9.16.0",
+    "http-cache-semantics": "^4.1.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "netlify-cli": "^2.12.0",
