--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tabler/icons": "^1.119.0",
     "@tiptap/extension-color": "^2.0.0-beta.217",
     "@tiptap/extension-highlight": "^2.0.0-beta.217",
+    "@tiptap/extension-image": "^2.0.0-beta.220",
     "@tiptap/extension-link": "^2.0.0-beta.209",
     "@tiptap/extension-placeholder": "^2.0.0-beta.217",
     "@tiptap/extension-subscript": "^2.0.0-beta.217",
