--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tiptap/extension-highlight": "^2.0.0-beta.217",
     "@tiptap/extension-image": "^2.0.0-beta.220",
     "@tiptap/extension-link": "^2.0.0-beta.209",
+    "@tiptap/extension-mention": "^2.0.0-beta.220",
     "@tiptap/extension-placeholder": "^2.0.0-beta.217",
     "@tiptap/extension-subscript": "^2.0.0-beta.217",
     "@tiptap/extension-superscript": "^2.0.0-beta.217",
@@ -29,7 +30,9 @@
     "@tiptap/extension-underline": "^2.0.0-beta.217",
     "@tiptap/react": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
+    "@tiptap/suggestion": "^2.0.0-beta.220",
     "axios": "^1.3.3",
+    "emoji-picker-react": "^4.4.8",
     "firebase": "^9.16.0",
     "http-cache-semantics": "^4.1.1",
     "localforage": "^1.10.0",
@@ -38,7 +41,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
-    "tabler-icons-react": "^1.56.0"
+    "tabler-icons-react": "^1.56.0",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
