--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "netlify-cli": "^2.71.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-crop": "^10.0.9",
     "react-router-dom": "^6.8.0",
     "tabler-icons-react": "^1.56.0",
     "tippy.js": "^6.3.7"
