--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-image-crop": "^10.0.9",
     "react-router-dom": "^6.8.0",
     "tabler-icons-react": "^1.56.0",
-    "tippy.js": "^6.3.7"
+    "tippy.js": "^6.3.7",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
