--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/modals": "^5.10.1",
     "@mantine/tiptap": "^5.10.3",
     "@tabler/icons": "^1.119.0",
+    "@tanstack/react-query": "^4.29.11",
     "@tiptap/extension-color": "^2.0.0-beta.217",
     "@tiptap/extension-highlight": "^2.0.0-beta.217",
     "@tiptap/extension-image": "^2.0.0-beta.220",
