--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "match-sorter": "^6.3.1",
     "netlify-cli": "^2.71.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-image-crop": "^10.0.9",
     "react-router-dom": "^6.8.0",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.0.9",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
