--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tiptap/starter-kit": "^2.0.0-beta.209",
     "@tiptap/suggestion": "^2.0.0-beta.220",
     "axios": "^1.3.3",
+    "clsx": "^2.0.0",
     "emoji-picker-react": "^4.4.8",
     "firebase": "^9.16.0",
     "http-cache-semantics": "^4.1.1",
@@ -44,6 +45,7 @@
     "react-image-crop": "^10.0.9",
     "react-router-dom": "^6.8.0",
     "tabler-icons-react": "^1.56.0",
+    "tailwind-merge": "^1.14.0",
     "tippy.js": "^6.3.7",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
